# modern-solvers

./: Dockerfile  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: docker-publish.yml
notebooks/: dining.ipynb  einstein.ipynb  overview.ipynb  puzzle.ipynb  rock_paper.ipynb
src/modern_solvers/: __init__.py  __main__.py  einstein.py  jug_fill.py  papuzzle.py  puzzle.py  rock_paper_scissors.py  sat_utils.py  sudoku.py  test_sat_utils.py
tests/: __init__.py  test_main.py
